--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,22 +9,10 @@ on:
 jobs:
   build-test-push:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: fastapi_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd "pg_isready -U postgres"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+
     env:
-      DATABASE_URL: postgresql+psycopg2://postgres:postgres@postgres:5432/fastapi_db
+      # Use SQLite for tests so they don't depend on Postgres DNS/availability
+      DATABASE_URL: sqlite:///./test.db
 
     steps:
       - uses: actions/checkout@v4
