--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
         if: github.ref == 'refs/heads/main' && success()
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: srinivaskamireddy
+          password: Srinivas@1234
 
       - name: Build and push Docker image
         if: github.ref == 'refs/heads/main' && success()
@@ -42,4 +42,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-calculations:latest
+          tags: srinivaskamireddy/fastapi-calculations:latest
