Update Docker image tag format in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: srinivaskamireddy/fastapi-calculations:latest
+          tags: srinivaskamireddy/fastapi-calculations_latest_factorypattern
